2013-11-02  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl_es.rb: Aded OpenGL ES 2.0/3.0 support.
	* sample/GLES: Aded.
	* opengl_command.rb, opengl_ext_command.rb, opengl_ext_enum.rb: Updated using latest gl.xml.
	* generator/Rakefile: Supported new task 'clean'.

2013-10-20  vaiorabbit  <https://twitter.com/vaiorabbit>

	* glut.rb (:GLUTPassiveMotionFunc): Fixed signature definition (Thanks: Дмитрий Краснов).

2013-10-19  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl_command.rb, opengl_ext_command.rb, opengl_ext_enum.rb: Updated using latest gl.xml.

2013-10-06  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl_ext.rb (OpenGL.check_extension): Now compatible with OpenGL 3.0 and later (glGetString(GL_EXTENSIONS) was deprecated).

2013-10-05  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl_command.rb, opengl_ext_command.rb, opengl_ext_enum.rb: Updated using latest gl.xml.

2013-09-21  vaiorabbit  <https://twitter.com/vaiorabbit>

	* glut.rb: Minimal GLUT wrapper.
	* sample/GLUT: Added.
	* glfw.rb, glut.rb (load_dll): Now searches dll/dylib/so from current execution path.

2013-09-16  vaiorabbit  <https://twitter.com/vaiorabbit>

	* lib/glfw.rb (GLFW.create_callback): Now accepts Proc object. (ex.) "method(:key_callback).to_proc".

2013-09-15  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl-bindings.gemspec: Added to make RubyGems package.
	* Changed directory structure more RubyGems-compliant.

2013-09-14  vaiorabbit  <https://twitter.com/vaiorabbit>

	* generator/aux_generate_typemap.rb: Fixed to handle signed/unsinged correctly.
	* sample/GLExcess: Added.
	* opengl_ext_enum.rb, generator/generate_ext_enum.rb: Now checks if same constant is already defined before cosnt_set.

2013-09-08  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl_ext_command.rb, opengl_ext_enum.rb, opengl_ext.rb: Added for OpenGL extension support.
	* sample/report_env.rb: Reports the names of supported extensions.