@@ -77,6 +77,15 @@ module OpenGL
     const_set('GL_SAMPLER_OBJECT_AMD', 0x9155) unless defined?(GL_SAMPLER_OBJECT_AMD)
   end # define_enum_GL_AMD_name_gen_delete
 
+  def define_enum_GL_AMD_occlusion_query_event
+    const_set('GL_OCCLUSION_QUERY_EVENT_MASK_AMD', 0x874F) unless defined?(GL_OCCLUSION_QUERY_EVENT_MASK_AMD)
+    const_set('GL_QUERY_DEPTH_PASS_EVENT_BIT_AMD', 0x00000001) unless defined?(GL_QUERY_DEPTH_PASS_EVENT_BIT_AMD)
+    const_set('GL_QUERY_DEPTH_FAIL_EVENT_BIT_AMD', 0x00000002) unless defined?(GL_QUERY_DEPTH_FAIL_EVENT_BIT_AMD)
+    const_set('GL_QUERY_STENCIL_FAIL_EVENT_BIT_AMD', 0x00000004) unless defined?(GL_QUERY_STENCIL_FAIL_EVENT_BIT_AMD)
+    const_set('GL_QUERY_DEPTH_BOUNDS_FAIL_EVENT_BIT_AMD', 0x00000008) unless defined?(GL_QUERY_DEPTH_BOUNDS_FAIL_EVENT_BIT_AMD)
+    const_set('GL_QUERY_ALL_EVENT_BITS_AMD', 0xFFFFFFFF) unless defined?(GL_QUERY_ALL_EVENT_BITS_AMD)
+  end # define_enum_GL_AMD_occlusion_query_event
+
   def define_enum_GL_AMD_performance_monitor
     const_set('GL_COUNTER_TYPE_AMD', 0x8BC0) unless defined?(GL_COUNTER_TYPE_AMD)
     const_set('GL_COUNTER_RANGE_AMD', 0x8BC1) unless defined?(GL_COUNTER_RANGE_AMD)
@@ -3466,8 +3475,8 @@ module OpenGL
     const_set('GL_INTERLACE_READ_INGR', 0x8568) unless defined?(GL_INTERLACE_READ_INGR)
   end # define_enum_GL_INGR_interlace_read
 
-  def define_enum_GL_INTEL_fragment_ordering
-  end # define_enum_GL_INTEL_fragment_ordering
+  def define_enum_GL_INTEL_fragment_shader_ordering
+  end # define_enum_GL_INTEL_fragment_shader_ordering
 
   def define_enum_GL_INTEL_map_texture
     const_set('GL_TEXTURE_MEMORY_LAYOUT_INTEL', 0x83FF) unless defined?(GL_TEXTURE_MEMORY_LAYOUT_INTEL)
@@ -3664,16 +3673,9 @@ module OpenGL
   end # define_enum_GL_NV_bindless_texture
 
   def define_enum_GL_NV_blend_equation_advanced
-    const_set('GL_BLUE_NV', 0x1905) unless defined?(GL_BLUE_NV)
-    const_set('GL_GREEN_NV', 0x1904) unless defined?(GL_GREEN_NV)
-    const_set('GL_RED_NV', 0x1903) unless defined?(GL_RED_NV)
-    const_set('GL_XOR_NV', 0x1506) unless defined?(GL_XOR_NV)
-    const_set('GL_BLUE', 0x1905) unless defined?(GL_BLUE)
-    const_set('GL_GREEN', 0x1904) unless defined?(GL_GREEN)
-    const_set('GL_RED', 0x1903) unless defined?(GL_RED)
-    const_set('GL_XOR', 0x1506) unless defined?(GL_XOR)
     const_set('GL_BLEND_OVERLAP_NV', 0x9281) unless defined?(GL_BLEND_OVERLAP_NV)
     const_set('GL_BLEND_PREMULTIPLIED_SRC_NV', 0x9280) unless defined?(GL_BLEND_PREMULTIPLIED_SRC_NV)
+    const_set('GL_BLUE_NV', 0x1905) unless defined?(GL_BLUE_NV)
     const_set('GL_COLORBURN_NV', 0x929A) unless defined?(GL_COLORBURN_NV)
     const_set('GL_COLORDODGE_NV', 0x9299) unless defined?(GL_COLORDODGE_NV)
     const_set('GL_CONJOINT_NV', 0x9284) unless defined?(GL_CONJOINT_NV)
@@ -3687,6 +3689,7 @@ module OpenGL
     const_set('GL_DST_OUT_NV', 0x928D) unless defined?(GL_DST_OUT_NV)
     const_set('GL_DST_OVER_NV', 0x9289) unless defined?(GL_DST_OVER_NV)
     const_set('GL_EXCLUSION_NV', 0x92A0) unless defined?(GL_EXCLUSION_NV)
+    const_set('GL_GREEN_NV', 0x1904) unless defined?(GL_GREEN_NV)
     const_set('GL_HARDLIGHT_NV', 0x929B) unless defined?(GL_HARDLIGHT_NV)
     const_set('GL_HARDMIX_NV', 0x92A9) unless defined?(GL_HARDMIX_NV)
     const_set('GL_HSL_COLOR_NV', 0x92AF) unless defined?(GL_HSL_COLOR_NV)
@@ -3709,6 +3712,7 @@ module OpenGL
     const_set('GL_PLUS_CLAMPED_NV', 0x92B1) unless defined?(GL_PLUS_CLAMPED_NV)
     const_set('GL_PLUS_DARKER_NV', 0x9292) unless defined?(GL_PLUS_DARKER_NV)
     const_set('GL_PLUS_NV', 0x9291) unless defined?(GL_PLUS_NV)
+    const_set('GL_RED_NV', 0x1903) unless defined?(GL_RED_NV)
     const_set('GL_SCREEN_NV', 0x9295) unless defined?(GL_SCREEN_NV)
     const_set('GL_SOFTLIGHT_NV', 0x929C) unless defined?(GL_SOFTLIGHT_NV)
     const_set('GL_SRC_ATOP_NV', 0x928E) unless defined?(GL_SRC_ATOP_NV)
@@ -3718,6 +3722,7 @@ module OpenGL
     const_set('GL_SRC_OVER_NV', 0x9288) unless defined?(GL_SRC_OVER_NV)
     const_set('GL_UNCORRELATED_NV', 0x9282) unless defined?(GL_UNCORRELATED_NV)
     const_set('GL_VIVIDLIGHT_NV', 0x92A6) unless defined?(GL_VIVIDLIGHT_NV)
+    const_set('GL_XOR_NV', 0x1506) unless defined?(GL_XOR_NV)
     const_set('GL_ZERO', 0) unless defined?(GL_ZERO)
   end # define_enum_GL_NV_blend_equation_advanced
 
