@@ -1,3 +1,7 @@
+2013-11-27  vaiorabbit  <https://twitter.com/vaiorabbit>
+
+	* opengl_ext_command.rb, opengl_ext_enum.rb: Updated using latest gl.xml.
+
 2013-11-02  vaiorabbit  <https://twitter.com/vaiorabbit>
 
 	* opengl_es.rb: Aded OpenGL ES 2.0/3.0 support.
